# vipers

./: CMakeLists.txt  README.md
CLI/: CLIConfig.hpp.in  CMakeLists.txt  OpenCVWindow.cpp  OpenCVWindow.hpp  main.cpp  viperscli.sh
CLI/CMakeModules/: FindOpenCV.cmake
Modules/: CMakeLists.txt
Modules/BgColor/: BgColor.cpp  BgColor.hpp  BgColorConfig.hpp  BgColorConfig.hpp.in  CMakeLists.txt
Modules/CMakeModules/: FindOpenCV.cmake
Modules/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  CameraConfig.hpp.in
Modules/Color2Gray/: CMakeLists.txt  Color2Gray.cpp  Color2Gray.hpp  Color2GrayConfig.hpp.in
Modules/DistanceTransform/: CMakeLists.txt  DistanceTransform.cpp  DistanceTransform.hpp  DistanceTransformConfig.hpp.in
Modules/Embedding/: CMakeLists.txt  Embedding.cpp  Embedding.hpp  EmbeddingConfig.hpp.in
Modules/ImageDifference/: CMakeLists.txt  ImageDifference.cpp  ImageDifference.hpp  ImageDifferenceConfig.hpp.in
Modules/ImageWriter/: CMakeLists.txt  ImageWriter.cpp  ImageWriter.hpp  ImageWriterConfig.hpp.in
Modules/MEI/: CMakeLists.txt  MEI.cpp  MEI.hpp  MEIConfig.hpp.in
Modules/MHI/: CMakeLists.txt  MHI.cpp  MHI.hpp  MHIConfig.hpp.in
Modules/OpticalFlow/: CMakeLists.txt  OpticalFlow.cpp  OpticalFlow.hpp  OpticalFlowConfig.hpp.in
Modules/Resize/: CMakeLists.txt  Resize.cpp  Resize.hpp  ResizeConfig.hpp.in
Modules/Threshold/: CMakeLists.txt  Threshold.cpp  Threshold.hpp  ThresholdConfig.hpp.in
Modules/Translucency/: CMakeLists.txt  Translucency.cpp  Translucency.hpp  TranslucencyConfig.hpp.in
Modules/VideoReader/: CMakeLists.txt  VideoReader.cpp  VideoReader.hpp  VideoReaderConfig.hpp.in
VIPERS/: CMakeLists.txt
VIPERS/CMakeModules/: FindVIPERS.cmake
VIPERS/VIPERS/: Color.cpp  Color.hpp  Converter.cpp  Converter.hpp  Exception.cpp  Exception.hpp  Image.cpp  Image.hpp  ImageUtils.hpp  Kernel.cpp  Kernel.hpp  KernelState.cpp  KernelState.hpp  KernelStateNotifier.cpp  KernelStateNotifier.hpp  Module.cpp  Module.hpp  ModuleFactory.cpp  ModuleFactory.hpp  ModuleSlot.cpp  ModuleSlot.hpp  ModulesManager.cpp  ModulesManager.hpp  Monitor.cpp  Monitor.hpp  Notifier.cpp  Notifier.hpp  Parameter.cpp  Parameter.hpp  Property.cpp  Property.hpp  SequentialKernel.cpp  SequentialKernel.hpp  Size.cpp  Size.hpp  VIPERS.hpp  VIPERSConfig.cpp.in  VIPERSConfig.hpp.in  Variable.cpp  Variable.hpp  (+2 more)
VIPERS/VIPERS/PACC/: Readme.txt
VIPERS/VIPERS/PACC/Util/: Assert.hpp
VIPERS/doc/: CMakeLists.txt  doxygen.config.in
VisualVIPERS/: AUTHORS  CMakeLists.txt  visualvipers.sh
VisualVIPERS/CMakeModules/: FindOpenCV.cmake
VisualVIPERS/icons/: vipers.icns
VisualVIPERS/images/: Readme.txt
VisualVIPERS/res/: images.qrc  texts.qrc  windows.rc
VisualVIPERS/src/: AboutDialog.cpp  AboutDialog.hpp  MainWindow.cpp  MainWindow.hpp  ModuleInfo.cpp  ModuleInfo.hpp  ModuleInstanceInfo.cpp  ModuleInstanceInfo.hpp  ModuleParameterStack.cpp  ModuleParameterStack.hpp  ModuleParameterWidget.cpp  ModuleParameterWidget.hpp  ModuleSlotLink.cpp  ModuleSlotLink.hpp  ModuleSlotWidget.cpp  ModuleSlotWidget.hpp  ModuleWidget.cpp  ModuleWidget.hpp  ModulesLayoutScene.cpp  ModulesLayoutScene.hpp  ModulesList.cpp  ModulesList.hpp  MonitorWindow.cpp  MonitorWindow.hpp  SharedObjects.cpp  SharedObjects.hpp  UIKernelStateNotifier.cpp  UIKernelStateNotifier.hpp  VisualVipersConfig.hpp.in  main.cpp
