cmake_minimum_required(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules)

# ---------- BUILD TYPE ----------
IF( NOT CMAKE_BUILD_TYPE )
  SET( CMAKE_BUILD_TYPE "Debug" )
ENDIF()

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()

# Set debug variable for modules
IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  ADD_DEFINITIONS(-DVIPERS_MODULES_DEBUG)
ENDIF()

# Modules subdirectory
ADD_SUBDIRECTORY( BgColor )
ADD_SUBDIRECTORY( Camera )
ADD_SUBDIRECTORY( Color2Gray )
ADD_SUBDIRECTORY( DistanceTransform )
ADD_SUBDIRECTORY( Embedding )
ADD_SUBDIRECTORY( ImageDifference )
ADD_SUBDIRECTORY( ImageReader )
ADD_SUBDIRECTORY( ImageWriter )
ADD_SUBDIRECTORY( MEI )
ADD_SUBDIRECTORY( MHI )
ADD_SUBDIRECTORY( OpticalFlow )
ADD_SUBDIRECTORY( Resize )
ADD_SUBDIRECTORY( Testing )
ADD_SUBDIRECTORY( Threshold )
ADD_SUBDIRECTORY( Translucency )
ADD_SUBDIRECTORY( VideoReader )
