CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(BGCOLOR_MODULE)

# This is the package release versioning info
SET(BGCOLOR_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/BgColorConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/BgColorConfig.hpp)

# Glob all sources and headers
FILE(GLOB BgColorModuleSources *.cpp)
FILE(GLOB BgColorModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (bgcolor MODULE ${BgColorModuleSources})
SET_TARGET_PROPERTIES(bgcolor PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(bgcolor ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS bgcolor DESTINATION bin/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/bgcolor.png DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS bgcolor DESTINATION share/VIPERS/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/bgcolor.png DESTINATION share/VIPERS/modules)
ENDIF()
