CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(CAMERA_MODULE)

# This is the package release versioning info
SET(CAMERA_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/CameraConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/CameraConfig.hpp)

# Glob all sources and headers
FILE(GLOB CameraModuleSources *.cpp)
FILE(GLOB CameraModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (camera MODULE ${CameraModuleSources})
SET_TARGET_PROPERTIES(camera PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(camera ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS camera DESTINATION bin/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/camera.png DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS camera DESTINATION share/VIPERS/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/camera.png DESTINATION share/VIPERS/modules)
ENDIF()
