CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(COLOR2GRAY_MODULE)

# This is the package release versioning info
SET(COLOR2GRAY_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/Color2GrayConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/Color2GrayConfig.hpp)

# Glob all sources and headers
FILE(GLOB Color2GrayModuleSources *.cpp)
FILE(GLOB Color2GrayModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (color2gray MODULE ${Color2GrayModuleSources})
SET_TARGET_PROPERTIES(color2gray PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(color2gray ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS color2gray DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS color2gray DESTINATION share/VIPERS/modules)
ENDIF()
