CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(MEI_MODULE)

# This is the package release versioning info
SET(MEI_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/MEIConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/MEIConfig.hpp)

# Glob all sources and headers
FILE(GLOB MEIModuleSources *.cpp)
FILE(GLOB MEIModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (mei MODULE ${MEIModuleSources})
SET_TARGET_PROPERTIES(mei PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(mei ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS mei DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS mei DESTINATION share/VIPERS/modules)
ENDIF()
