CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(MHI_MODULE)

# This is the package release versioning info
SET(MHI_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/MHIConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/MHIConfig.hpp)

# Glob all sources and headers
FILE(GLOB MHIModuleSources *.cpp)
FILE(GLOB MHIModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (mhi MODULE ${MHIModuleSources})
SET_TARGET_PROPERTIES(mhi PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(mhi ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS mhi DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS mhi DESTINATION share/VIPERS/modules)
ENDIF()
