CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RESIZE_MODULE)

# This is the package release versioning info
SET(RESIZE_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/ResizeConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/ResizeConfig.hpp)

# Glob all sources and headers
FILE(GLOB ResizeModuleSources *.cpp)
FILE(GLOB ResizeModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (resize MODULE ${ResizeModuleSources})
SET_TARGET_PROPERTIES(resize PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(resize ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS resize DESTINATION bin/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/resize.png DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS resize DESTINATION share/VIPERS/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/resize.png DESTINATION share/VIPERS/modules)
ENDIF()
