CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(THRESHOLD_MODULE)

# This is the package release versioning info
SET(THRESHOLD_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/ThresholdConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/ThresholdConfig.hpp)

# Glob all sources and headers
FILE(GLOB ThresholdModuleSources *.cpp)
FILE(GLOB ThresholdModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (threshold MODULE ${ThresholdModuleSources})
SET_TARGET_PROPERTIES(threshold PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(threshold ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS threshold DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS threshold DESTINATION share/VIPERS/modules)
ENDIF()
