CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(VIDEOREADER_MODULE)

# This is the package release versioning info
SET(VIDEOREADER_MODULE_RELEASE_VERSION 0.1.0)

# Find VIPERS library
IF(NOT VIPERS_FOUND)
  FIND_PACKAGE(VIPERS REQUIRED)
ENDIF()
INCLUDE_DIRECTORIES( ${VIPERS_INCLUDE_DIR} )

# Find OpenCV
IF(NOT OpenCV_INCLUDE_DIRS)
  FIND_PACKAGE(OpenCV REQUIRED CV CXCORE HIGHGUI)
ENDIF()
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )

# Generate version.hpp file
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/VideoReaderConfig.hpp.in ${CMAKE_CURRENT_SOURCE_DIR}/VideoReaderConfig.hpp)

# Glob all sources and headers
FILE(GLOB VideoReaderModuleSources *.cpp)
FILE(GLOB VideoReaderModuleHeaders *.hpp)

# Create target
ADD_LIBRARY (videoreader MODULE ${VideoReaderModuleSources})
SET_TARGET_PROPERTIES(videoreader PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(videoreader ${VIPERS_LIBRARIES} ${OpenCV_LIBRARIES})

# Install
IF(VIPERSALL_BUNDLE)
    INSTALL(TARGETS videoreader DESTINATION bin/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/videoreader.png DESTINATION bin/modules)
ELSE()
    INSTALL(TARGETS videoreader DESTINATION share/VIPERS/modules)
    INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/icon/videoreader.png DESTINATION share/VIPERS/modules)
ENDIF()
