CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# ---------- GENERATE doxygen.config ----------
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/doxygen.config.in ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config @ONLY)

# ---------- BUILD / INSTALL DOC TARGET ----------
ADD_CUSTOM_TARGET(doc ALL doxygen ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config)
SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES ${CMAKE_CURRENT_BINARY_DIR}/html)

IF(VIPERSALL_BUNDLE)
  INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION doc)
ELSE()
  INSTALL(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/html DESTINATION share/doc/VIPERS)
ENDIF()
